fixed layout shift

--- a/public/styles/general.css
+++ b/public/styles/general.css
@@ -19,7 +19,7 @@ body {
   height: 100vh;
   width: 100%;
   display: grid;
-  place-content: center;
+  place-items: center;
 }
 :root {
   /* Colors */
