--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -1,5 +1,7 @@
 /* STARTING SCREEN */
-
+.quiz-container {
+  width: 100%;
+}
 .starting-screen {
   display: flex;
   flex-direction: column;
@@ -55,7 +57,6 @@
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   column-gap: 1rem;
-  width: 50%;
 }
 
 .difficulty-input {
@@ -213,6 +214,7 @@ selectedcontent .category-img {
   display: flex;
   flex-direction: column;
   gap: 2rem;
+  width: 100%;
   padding: 0 2.4rem;
 }
 .header {
